2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* i386/displayCpu.c: Include rtems/bspIo.h instead of bspIo.h.
	* i386/page.c: Include rtems/bspIo.h instead of bspIo.h.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use 'PREINSTALL_FILES ='.
	* Makefile.am: Use 'CLEANFILES ='.

2001-02-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Apply include_*HEADERS instead of H_FILES.
	* .cvsignore: Add cache.h.

2000-12-06	Joel Sherrill <joel@OARcorp.com>

	* displayCpu.c: Added include of <rtems.h> to eliminate warnings.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-10-19	Joel Sherrill <joel@OARcorp.com>

	* page.c: Readd deleted comment lines.

2000-10-18	Joel Sherrill <joel@OARcorp.com>

	* page.c: Replaced prototype of printk() with include of <bspIo.h>.

2000-10-17	Joel Sherrill <joel@OARcorp.com>

	* idt.c, Makefile.am: Moved idt.c to libbsp/i386/shared so 
	i386 RTEMS can be multilib'ed.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Include compile.am

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.